Sleeping period implemented, confirm rule deletion implemented, + test